# live_to_want

assets/: goal_diagram.drawio
deep_ai/: Cargo.toml  README.md  cargo.toml  out.txt  run_10_neurons_10_layers.txt  run_10_neurons_10_layers10x.txt
deep_ai/src/: bert_nets.rs  lib.rs  main.rs  math_rl_game.rs  normal_nets.rs
deep_ai/tests/: sanity_tests.rs
live_to_want_game/: Cargo.toml  README.md
live_to_want_game/src/: ai.rs  creature.rs  lib.rs  map_state.rs  networking.rs  tasks.rs  utils.rs
live_to_want_game/src/ai/: goals.rs  reward_graph.rs
live_to_want_game/src/creature/: battle.rs  components.rs  creature_struct.rs  systems.rs
live_to_want_game/src/map_state/: creature_execution.rs  items.rs  map_main.rs  navigation.rs
live_to_want_game/src/networking/: messages.rs  server.rs
live_to_want_game/src/tasks/: task_main.rs
live_to_want_game/tests/: ai_gameplay_tests.rs  goal_graph_tests.rs  movement_system_tests.rs  multi_thread_tests.rs  nav_tests.rs  networking_tests.rs  reward_graph_tests.rs  sanity_tests.rs  systems_tests.rs
