[package]
name = "live_to_want_game"
version = "0.1.0"
authors = ["junaidnom <junaidnom@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# typemap = "0.3.3"
# specs is also neat ECS for rust if want to do that

[dependencies]
rayon = "1.4.0"
rand = "0.7.3"
tokio = { version = "1.7.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
